--- a/_includes/material_design_css_theme.html
+++ b/_includes/material_design_css_theme.html
@@ -1,3 +1,3 @@
-<link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.amber-blue.min.css" />
-<script src="https://storage.googleapis.com/code.getmdl.io/1.0.5/material.min.js"></script>
+<link rel="stylesheet" href="/css/vendor/material.min.css" />
+<script src="/scripts/vendor/material.min.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
