--- a/css/header.scss
+++ b/css/header.scss
@@ -1,10 +1,6 @@
 ---
 ---
-
-$max-width: 64rem;
-
-$layout-farbg-color: #EBEBEB;
-$layout-nearbg-color: #FAFAFA;
+@import "constants";
 
 .mdl-layout__content {
     background-color: $layout-farbg-color;
@@ -17,12 +13,36 @@ $layout-nearbg-color: #FAFAFA;
         margin-left: auto;
         margin-right: auto;
         width: 100%;
-        height: 100%;
+        min-height: calc(100% - #{$footer-height});
 
-        padding: 1em;
+        padding: 1rem;
 
         background-color: $layout-nearbg-color;
 
         max-width: $max-width;
+    }
+}
+
+a.unstyled-link {
+    font-style: inherit;
+    text-decoration: inherit;
+    color: inherit;
+}
+
+.mdl-layout__drawer {
+    > .mdl-layout-title {
+        line-height: normal;
+        padding-right: 1rem;
+        padding-top: 2rem;
+    }
+
+    > .drawer-page-title {
+        display: block;
+        box-sizing: border-box;
+        width: 100%;
+        padding: 1rem 2rem;
+        text-align: justify;
+        font-size: 1.15em;
+        font-style: italic;
     }
 }
