--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div class="pure-menu pure-menu-horizontal">
+    <header class="pure-menu pure-menu-horizontal">
       <a href="/" class="pure-menu-heading pure-menu-link">hexaglow.com</a>
       <div class="flex-spacer"></div>
       <ul class="pure-menu-list">
@@ -31,7 +31,7 @@
           </li>
         {% endfor %}
       </ul>
-    </div>
+    </header>
 
     <div class="centre">
       <div class="primary-layout">
